src/objects/PYME001_Empresas__c.object
<CustomObject>
    <description>Nuevo objeto Pyme Empresas</description>
    <fields>
        <fullName>BPyP_ls_Dispersa_N_mina_con_Bancomer__c</fullName>
        <description>¿Dispersa Nómina con Bancomer?
BPyP</description>
        <inlineHelpText>¿Dispersa Nómina con Bancomer?
BPyP</inlineHelpText>
        <label>¿Dispersa Nómina con Bancomer?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP_ls_EmpresaRelaci_nBancomer__c</fullName>
        <description>La Empresa ¿tiene relación con Bancomer?
BPyP</description>
        <inlineHelpText>La Empresa ¿tiene relación con Bancomer?
BPyP</inlineHelpText>
        <label>La Empresa ¿tiene relación con Bancomer?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP_ls_Tiene_cr_dito_con_Bancomer__c</fullName>
        <description>¿Tiene crédito con Bancomer?
BPyP</description>
        <inlineHelpText>¿Tiene crédito con Bancomer?
BPyP</inlineHelpText>
        <label>¿Tiene crédito con Bancomer?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP_tx_N_mero_de_Cliente_Empresa__c</fullName>
        <description>Número de Cliente Empresa
BPyP</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Número de Cliente Empresa
BPyP</inlineHelpText>
        <label>Número de Cliente Empresa</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BPyP_un_N_mero_de_Empleados__c</fullName>
        <description>Número de Empleados
BPyP</description>
        <inlineHelpText>Número de Empleados
BPyP</inlineHelpText>
        <label>Número de Empleados</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_PYME_Reporte__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reporte relacionado a la empresa</description>
        <label>Reporte PyME</label>
        <referenceTo>MX_PyME_Reporte__c</referenceTo>
        <relationshipLabel>Empresas</relationshipLabel>
        <relationshipName>Empresas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PYME_br_Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Empresas</relationshipLabel>
        <relationshipName>Empresas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PYME_txt_RFC__c</fullName>
        <description>Nuevo campo para PYME empresas RFC</description>
        <encryptionScheme>None</encryptionScheme>
        <label>RFC</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Empresa</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PYME_txt_RFC__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre de Empresas</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Empresas</pluralLabel>
    <recordTypes>
        <fullName>Empresa_BPyP</fullName>
        <active>true</active>
        <description>Empresas BPyP</description>
        <label>Empresa BPyP</label>
    </recordTypes>
    <recordTypes>
        <fullName>PYME_tre_Empresa</fullName>
        <active>true</active>
        <label>Empresa PyME</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>